fix(menu-bar): add fix spacing menu bar

--- a/components/50-50/50-50.less
+++ b/components/50-50/50-50.less
@@ -5,7 +5,7 @@
 }
 
 .fifty-fifty.container {
-	margin: 0 auto 0 auto;
+	margin: 0 auto @spacing-large*2 auto;
 }
 
 .fifty-fifty .container-inner {
