--- a/components/blog-extract/blog-extract.less
+++ b/components/blog-extract/blog-extract.less
@@ -46,11 +46,10 @@
 	float: left;
 	width: 100%;
 	position: relative;
-	padding: 0 @spacing-default;
+	padding: 0 @spacing-default @spacing-default @spacing-default;
 	color: @white;
 	text-align: left;
 	height: 100%;
-	max-height: 170px;
 	background: @green;
 
 	& > h3 {
