--- a/components/logo-list/logo-list.less
+++ b/components/logo-list/logo-list.less
@@ -10,11 +10,11 @@
     display: inline-block;
     width: 45%;
     max-width: 200px;
-    margin-bottom: 2rem;
-    padding: 0 10px;
+    margin-bottom: @spacing-medium;
+    padding: 0 @spacing-default;
 
     @media @screen-medium {
-        margin: 0 40px 2rem;
+        margin: 0 @spacing-large @spacing-medium;
     }
 }
 
