--- a/components/page-header/page-header.less
+++ b/components/page-header/page-header.less
@@ -8,7 +8,7 @@
 	width: 100%;
 	max-width: @column-small-4;
 	height: 440px;
-	margin: 100px auto;
+	margin: @spacing-extra-large auto @spacing-default*11;
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
 	background-size: cover;
