--- a/components/services-item-small/services-item-small.less
+++ b/components/services-item-small/services-item-small.less
@@ -9,27 +9,27 @@
 .services-item-small {
 	display: block;
 	position: relative;
-	left: 35px;
-	margin-bottom: @spacing-small;
+	width: 325px;
 	height: 150px;
+	left: 25px;
+	margin-bottom: @spacing-small;
 	
 	@media @screen-small {
 		float: left;
 		width: 100%;
 		height: 300px;	
 		left: 0px;
-		
+		margin-bottom: @spacing-extra-large;
+
 		&:not(:last-child) {
 			margin-right: @spacing-default;
 		}
 	}
 	@media @screen-medium {
-		max-width: 31%;
+		max-width: 32.32%;
 		margin-bottom: 0px;
 	}
-	@media @screen-large {
-		max-width: 32.35%;
-	}
+	
 }
 
 .services-item-small-content {
@@ -46,6 +46,12 @@
 		font-size: @body-text-s;
 		line-height: @line-height-body-s;
 		font-weight: @font-weight-bold;
+	}
+	
+	@media @screen-small { 
+		margin: auto;
+		top: -@spacing-large;
+		position: relative;
 	}
 
 	@media @screen-medium {
