--- a/components/twitter-extract/twitter-extract.less
+++ b/components/twitter-extract/twitter-extract.less
@@ -35,7 +35,7 @@
 	float: left;
 	width: 100%;
 	position: relative;
-	padding: @spacing-small;
+	padding: @spacing-default;
 	background: @blue;
 	color: @white;
 	
